Terraform/Network/route-tables/main.tf
resource "aws_route_table" "PublicRouteTable" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.IgwId
  }

  tags = {
    Name = "${var.enviromentName} PublicRouteTable "
  }
}
resource "aws_route_table_association" "PubRouteTableAssociate" {
  subnet_id      = var.pubSub1ID

  route_table_id = aws_route_table.PublicRouteTable.id
}
resource "aws_route_table_association" "PubRouteTableAssociate2" {
  subnet_id      = var.pubSub2ID

  route_table_id = aws_route_table.PublicRouteTable.id
}
resource "aws_route_table" "PrivateRouteTable1" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.Nat1ID
  }

  tags = {
    Name = "${var.enviromentName} PrivateRouteTable1"
  }
}
resource "aws_route_table" "PrivateRouteTable2" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.Nat2ID
  }

  tags = {
    Name = "PrivateRouteTable2"
  }
}

resource "aws_route_table_association" "PrivRouteTableAssociate1" {
  subnet_id      = var.privSub1Id

  route_table_id = aws_route_table.PrivateRouteTable1.id
}
resource "aws_route_table_association" "PrivRouteTableAssociate2" {
  subnet_id      = var.privSub2Id
  route_table_id = aws_route_table.PrivateRouteTable2.id
}
